--- a/rocky-8.5.20220308/Dockerfile
+++ b/rocky-8.5.20220308/Dockerfile
@@ -21,7 +21,7 @@ RUN dnf install -y gcc-toolset-11-gcc gcc-toolset-11-gcc-c++ gcc-toolset-11-libs
 gcc-toolset-11-gdb gcc-toolset-11-gcc-gdb-plugin gcc-toolset-11-make \
 gcc-toolset-11-valgrind gcc-toolset-11-strace gcc-toolset-11-ltrace \
 gcc-toolset-11-libasan-devel gcc-toolset-11-libtsan-devel \
-git cmake autoconf automake mariadb-server mariadb-devel \
+git git-lfs cmake autoconf automake mariadb-server mariadb-devel \
 openssl openssh openssh-server openssh-clients \
 libuuid libuuid-devel libunwind libunwind-devel libsodium \
 wget vim python39 python39-devel openldap-devel \
