tools update. feat:     1.  tools update.     2.  oh-my-zsh update.     3.  fonts update.     4.  rocky-8.5 update.
Signed-off-by: stanleyguo0207 <stanleyguo0207@163.com>

--- a/rocky-8.5.20220308/Dockerfile
+++ b/rocky-8.5.20220308/Dockerfile
@@ -6,9 +6,9 @@ EXPOSE 22
 
 # replace repo
 RUN sed -e 's|^mirrorlist=|#mirrorlist=|g' \
-	-e 's|^#baseurl=http://dl.rockylinux.org/$contentdir|baseurl=https://mirrors.aliyun.com/rockylinux|g' \
-	-i.bak \
-	/etc/yum.repos.d/Rocky-*.repo &&\
+	    -e 's|^#baseurl=http://dl.rockylinux.org/$contentdir|baseurl=https://mirrors.aliyun.com/rockylinux|g' \
+	    -i.bak \
+	    /etc/yum.repos.d/Rocky-*.repo &&\
 dnf install -y https://mirrors.aliyun.com/epel/epel-release-latest-8.noarch.rpm &&\
 sed -e 's|^#baseurl=https://download.example/pub|baseurl=https://mirrors.aliyun.com|' \
     -e 's|^metalink|#metalink|' \
@@ -21,11 +21,26 @@ RUN dnf install -y gcc-toolset-11 llvm-toolset llvm-devel clang-devel \
 git git-lfs cmake autoconf automake mariadb-server mariadb-devel \
 openssl openssh openssh-server openssh-clients \
 libuuid libuuid-devel libunwind libunwind-devel libsodium \
-wget vim python39 python39-devel openldap-devel \
+wget vim zsh python39 python39-devel openldap-devel util-linux-user sudo \
 passwd tmux htop net-tools rsync tar bzip2 xz zip unzip lrzsz perf lsof telnet graphviz &&\
 git lfs install
 
 RUN dnf --enablerepo=powertools install -y texinfo doxygen
+
+# hosts
+RUN echo "140.82.112.3"$'\t'"github.com" \
+         $'\n'"140.82.114.5"$'\t'"api.github.com" \
+         $'\n'"185.199.108.153"$'\t'"github.io" \
+         $'\n'"185.199.108.133"$'\t'"raw.github.com" \
+         $'\n'"185.199.108.133"$'\t'"raw.githubusercontent.com" \
+         $'\n'"185.199.109.133"$'\t'"raw.githubusercontent.com" \
+         $'\n'"185.199.110.133"$'\t'"raw.githubusercontent.com" \
+         $'\n'"185.199.111.133"$'\t'"raw.githubusercontent.com" \
+         $'\n'"2606:50c0:8000::154"$'\t'"raw.githubusercontent.com" \
+         $'\n'"2606:50c0:8001::154"$'\t'"raw.githubusercontent.com" \
+         $'\n'"2606:50c0:8002::154"$'\t'"raw.githubusercontent.com" \
+         $'\n'"2606:50c0:8003::154"$'\t'"raw.githubusercontent.com" \
+         >> /etc/hosts
 
 # tools
 COPY tools /root/tools
@@ -34,8 +49,19 @@ COPY tools /root/tools
 RUN mv -f /root/tools/ninja /bin/ninja &&\
 chmod 755 /bin/ninja &&\
 chown root:root /bin/ninja &&\
-tar -Jxf /root/tools/ccls.tar.xz -C /opt/ &&\
+# oh-my-zsh
+cp /root/tools/omz.sh /root/ &&\
+mkdir -p /root/omz/ &&\
+tar -Jxf /root/tools/powerlevel10k.tar.xz -C /root/omz/ &&\
+tar -Jxf /root/tools/omz_plugins.tar.xz -C /root/omz/ &&\
+# fonts
+tar -Jxf /root/tools/fonts.tar.xz -C /root/tools/ &&\
+/root/tools/fonts/install.sh &&\
+mkdir -p /root/.config/fontconfig/conf.d &&\
+cp /root/tools/50-enable-terminess-powerline.conf /root/.config/fontconfig/conf.d/ &&\
+fc-cache -vf ~/.local/share/fonts/ &&\
 # ccls
+tar -Jxf /root/tools/ccls.tar.xz -C /opt/ &&\
 cd /opt/ccls &&\
 cmake \
     -H. \
@@ -59,8 +85,8 @@ RUN rm -rf /root/tools
 # local time
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
 # ssh config
-sed -e 's/GSSAPIAuthentication yes/GSSAPIAuthentication no/g' \
-    -e 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/g' \
+sed -e 's|GSSAPIAuthentication yes|GSSAPIAuthentication no|g' \
+    -e 's|#PubkeyAuthentication yes|PubkeyAuthentication yes|g' \
     -i /etc/ssh/sshd_config &&\
 # gcc-toolset-11
 sed -e '/# You might want/i\    source /opt/rh/gcc-toolset-11/enable' \
