rocky-8.5 update. feat:     1. rocky-8.5 update.     2. createcontainer.sh and createuser.sh.
Signed-off-by: stanleyguo0207 <stanleyguo0207@163.com>

--- a/rocky-8.5.20220308/Dockerfile
+++ b/rocky-8.5.20220308/Dockerfile
@@ -32,8 +32,10 @@ RUN dnf --enablerepo=powertools install -y texinfo doxygen
 
 # hosts
 RUN echo "140.82.112.3"$'\t'"github.com" \
+         $'\n'"140.82.113.3"$'\t'"github.com" \
          $'\n'"140.82.114.5"$'\t'"api.github.com" \
          $'\n'"185.199.108.153"$'\t'"github.io" \
+         $'\n'"199.232.69.194"$'\t'"github.global.ssl.fastly.net" \
          $'\n'"185.199.108.133"$'\t'"raw.github.com" \
          $'\n'"185.199.108.133"$'\t'"raw.githubusercontent.com" \
          $'\n'"185.199.109.133"$'\t'"raw.githubusercontent.com" \
@@ -43,6 +45,14 @@ RUN echo "140.82.112.3"$'\t'"github.com" \
          $'\n'"2606:50c0:8001::154"$'\t'"raw.githubusercontent.com" \
          $'\n'"2606:50c0:8002::154"$'\t'"raw.githubusercontent.com" \
          $'\n'"2606:50c0:8003::154"$'\t'"raw.githubusercontent.com" \
+         $'\n'"185.199.108.153"$'\t'"assets-cdn.github.com" \
+         $'\n'"185.199.109.153"$'\t'"assets-cdn.github.com" \
+         $'\n'"185.199.110.153"$'\t'"assets-cdn.github.com" \
+         $'\n'"185.199.111.153"$'\t'"assets-cdn.github.com" \
+         $'\n'"2606:50c0:8000::153"$'\t'"assets-cdn.github.com" \
+         $'\n'"2606:50c0:8001::153"$'\t'"assets-cdn.github.com" \
+         $'\n'"2606:50c0:8002::153"$'\t'"assets-cdn.github.com" \
+         $'\n'"2606:50c0:8003::153"$'\t'"assets-cdn.github.com" \
          >> /etc/hosts
 
 # tools
