tools modify. feat:     1. tools modify.
Signed-off-by: stanleyguo0207 <stanleyguo0207@163.com>

--- a/rocky-8.5.20220308/Dockerfile
+++ b/rocky-8.5.20220308/Dockerfile
@@ -101,8 +101,7 @@ cmake --build Release --parallel &&\
 cmake --install Release
 
 # pip3
-RUN ln -s /bin/pip3 /bin/pip &&\
-pip install ranger-fm ueberzug pynvim
+RUN ln -s /bin/pip3 /bin/pip
 
 # oh-my-zsh
 COPY tools/omz /root/tools/omz
