feat: Modify git config. 1.  Copy commit.template to rocky-8.5 image. 2.  Add git config to init_dev.sh. 3.  Modify update script.
Signed-off-by: stanleyguo0207 <stanleyguo0207@163.com>

--- a/rocky-8.5.20220308/Dockerfile
+++ b/rocky-8.5.20220308/Dockerfile
@@ -74,6 +74,9 @@ RUN echo "*"$'\t'"soft"$'\t'"core"$'\t'"unlimited" \
          $'\n'"root*"$'\t'"hard"$'\t'"nproc"$'\t'"102400" \
          >> /etc/security/limits.conf
 
+# git
+COPY commit.template /root/.config/commit.template
+
 # ninja
 COPY tools/ninja /bin/ninja
 RUN chmod 755 /bin/ninja &&\
